# OceanFFT

./: CMakeLists.txt  Camera.h  IFFT.cpp  IFFT.h  OpenCLFFT.cpp  OpenCLFFT.h  computeFourier.frag  fft_kernel.cl  fourierShader.frag  fourierShader.vert  main.cpp  rescaleHeight.frag  shader.frag  shader.vert  temp.frag  updateFourier.frag
